project setup completed

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "cra-template-typescript-cssmodule-sass",
-  "version": "0.1.0",
+  "name": "tableauextpoc",
+  "version": "1.0.0",
   "private": true,
   "dependencies": {
     "@types/jest": "^23.3.9",
