--- a/package.json
+++ b/package.json
@@ -7,15 +7,18 @@
     "@types/node": "^10.12.9",
     "@types/react": "^16.7.6",
     "@types/react-dom": "^16.0.9",
+    "antd": "^3.10.9",
     "node-sass": "^4.10.0",
     "react": "^16.6.3",
     "react-dom": "^16.6.3",
-    "react-scripts": "2.1.1",
-    "typescript": "^3.1.6"
+    "react-export-excel": "^0.5.3",
+    "react-scripts": "2.1.1"
   },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
+    "prepublish": "yarn run build",
+    "buildflow": "babel src/ -d lib/",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
@@ -30,5 +33,11 @@
   ],
   "main": "index.js",
   "author": "Matthew Chan <mattc3303@gmail.com>",
-  "license": "MIT"
+  "license": "MIT",
+  "devDependencies": {
+    "babel-cli": "^6.26.0",
+    "babel-preset-flow": "^6.23.0",
+    "flow-bin": "^0.86.0",
+    "promise-window": "^1.2.1"
+  }
 }
