--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "react": "^16.6.3",
     "react-dom": "^16.6.3",
     "react-export-excel": "^0.5.3",
+    "react-popout": "^1.0.1",
     "react-scripts": "2.1.1"
   },
   "scripts": {
