--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
     "react-dom": "^16.6.3",
     "react-export-excel": "^0.5.3",
     "react-popout": "^1.0.1",
-    "react-scripts": "2.1.1"
+    "react-redux": "^5.1.1",
+    "react-scripts": "2.1.1",
+    "redux": "^4.0.1"
   },
   "scripts": {
     "start": "react-scripts start",
