--- a/package.json
+++ b/package.json
@@ -7,6 +7,8 @@
     "@types/node": "^10.12.9",
     "@types/react": "^16.7.6",
     "@types/react-dom": "^16.0.9",
+    "ag-grid-community": "^19.1.4",
+    "ag-grid-react": "^19.1.2",
     "antd": "^3.10.9",
     "node-sass": "^4.10.0",
     "react": "^16.6.3",
@@ -15,7 +17,9 @@
     "react-popout": "^1.0.1",
     "react-redux": "^5.1.1",
     "react-scripts": "2.1.1",
-    "redux": "^4.0.1"
+    "react-table": "^6.8.6",
+    "redux": "^4.0.1",
+    "xlsx": "^0.14.1"
   },
   "scripts": {
     "start": "react-scripts start",
